--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.application.name=BhavCopySpringBoot
 
-spring.datasource.url =jdbc:postgresql://localhost:5432/training
-spring.datasource.username = vishwap
-spring.datasource.password =1234
+# Database Connection Properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/training
+spring.datasource.username=vishwap
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# HikariCP Settings
+spring.datasource.hikari.maximum-pool-size=10        
+spring.datasource.hikari.minimum-idle=5             
+spring.datasource.hikari.idle-timeout=30000          
+spring.datasource.hikari.max-lifetime=1800000       
+spring.datasource.hikari.connection-timeout=20000   
+
+# Hibernate/JPA Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
